@@ -2,11 +2,11 @@ module Spec
 
   class HaveHelper < ShouldBase
 
-    def initialize(target, expected=nil)
+    def initialize(target, relativity=:exactly, expected=nil)
       @target = target
       @expected = expected == :no ? 0 : expected
-      @at_least = false
-      @at_most = false
+      @at_least = (relativity == :at_least)
+      @at_most = (relativity == :at_most)
     end
     
     def method_missing(sym, *args)
@@ -33,22 +33,6 @@ module Spec
       return actual_size(collection(sym)) >= @expected if @at_least
       return actual_size(collection(sym)) <= @expected if @at_most
       return actual_size(collection(sym)) == @expected
-    end
-
-    def at
-      self
-    end
-    
-    def least(n)
-      @expected = n
-      @at_least = true
-      self
-    end
-    
-    def most(n)
-      @expected = n
-      @at_most = true
-      self
     end
 
   end
