@@ -18,14 +18,10 @@ module Spec
             object = self
             calls = sym.to_s.split("_")
             while calls.length > 1
-              if (object.respond_to?calls.join("_"))
-                object.__send__(calls.join("_"), *args, &block)
-                return
-              else
-                call = calls.shift
-                object = object.__send__(call)
-                break if call == "be"
-              end
+              break if (object.respond_to?calls.join("_"))
+              call = calls.shift
+              object = object.__send__(call)
+              break if call == "be"
             end
             return object.__send__(calls.join("_"), *args, &block)
           end
